# product-fusion-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml  otel-collector-config.yml
product_fusion_backend/: __init__.py  __main__.py  server_config.py  settings.py
product_fusion_backend/connections/: __init__.py
product_fusion_backend/core/: __init__.py
product_fusion_backend/core/schema/: common_response_schema.py
product_fusion_backend/core/services/: email_service.py  redis_service.py
product_fusion_backend/core/utils/: constants.py  enums.py  hash_utils.py  logging.py  open_telemetry_config.py
product_fusion_backend/dao/: __init__.py  base_dao.py  member_dao.py  organization_dao.py  role_dao.py  user_dao.py
product_fusion_backend/database/: __init__.py
product_fusion_backend/middlewares/: __init__.py  auth_middleware.py  logging_middleware.py
product_fusion_backend/migrations/: env.py
product_fusion_backend/migrations/versions/: 6b7694a5d624_feat_base_initial_migration.py  896d70b1ff36_feat_base_initial_migration.py
product_fusion_backend/models/: __init__.py  base.py  member_model.py  organization_model.py  role_model.py  user_model.py
product_fusion_backend/web/: application.py  hypercorn_app.py  lifetime.py
product_fusion_backend/web/api/: router.py
product_fusion_backend/web/api/auth/: __init__.py  controller.py  schema.py  service.py  views.py
product_fusion_backend/web/api/docs/: __init__.py  views.py
product_fusion_backend/web/api/echo/: __init__.py  views.py
product_fusion_backend/web/api/member/: __init__.py  controller.py  schema.py  views.py
product_fusion_backend/web/api/monitoring/: __init__.py  views.py
product_fusion_backend/web/api/statistics/: __init__.py  controller.py  views.py
